--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   path_provider: ^2.1.5
   path: ^1.9.0
+  sqflite: ^2.4.1
 
 dev_dependencies:
   flutter_test:
